--- a/assets/css/mapping.css
+++ b/assets/css/mapping.css
@@ -371,6 +371,7 @@ ul.links li, ul.links li a{
     color: #FFFFFF;
     display: block;
     height: 19px;
+    width: 280px;
     margin: 0;
     text-decoration: none;
     text-indent: -9999px;
