--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -86,7 +86,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  this.projects = country_attrs.projects;
 	  this.visibleSectors = [];
 	  this.map_id = map_id;
-	  if(country_attrs.regions !== null)
+	  if(country_attrs.regions !== undefined && country_attrs.regions !== null)
 		this.regions = country_attrs.regions;
 	  else
 		this.regions = {};
@@ -126,7 +126,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		  self.sector_names[sector.name.toLowerCase().trim()] = index; 
 		  self.sector_codes[sector.sector_code] = sector;
 	 });
-	 if(map_id !== null && map_id.length != 0){
+	 if(map_id !== undefined && map_id !== null && map_id.length != 0){
 
          if(self.country == "Latin American & Caribbean"
             || self.country == "Africa" 
@@ -153,11 +153,11 @@ if(typeof(F1)=='undefined') {F1 = {};}
 
 	setState: function(location,indicator,project,sectors) {
 	  var self = this;
-	  if(location !== null)
+	  if(location !== undefined && location !== null)
 		setLocation("",location.lat,location.lon,location.zoom);
-	  if(indicator !== null)
+	  if(indicator !== undefined && indicator !== null)
 		this.setIndicator(indicator);
-	  if(sectors !== null){
+	  if(sectors !== undefined && sectors !== null){
 		jq.each(sectors, function(sector) {
 		  self.toggleSector(sectors[sector], true);
 		})
@@ -192,26 +192,26 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  var self = this;
 	  var visibleExpression = "";
 
-	  if(self.stylelayers["Project Locations"] === null) // World Map
+	  if(self.stylelayers["Project Locations"] === undefined || self.stylelayers["Project Locations"] === null) // World Map
 		return;
 		
 	  self.current_projects = visible;
 	  
 	  if(sector == "none") {
 		self.map.showLayer(self.stylelayers["Project Locations"].order, visible);
-		if(self.stylelayers["Project Counts"] !== undefined)
+		if(self.stylelayers["Project Counts"] !== undefined && self.stylelayers["Project Counts"] !== null)
 			self.map.showLayer(self.stylelayers["Project Counts"].order, visible);		  
         jq('#layercontrol_projects').html("No Activities");
         jq('#map-content-icons').hide()
         jq('#map-content-regions').hide()
 	  } else if(sector == 'all') {
-		if(visible === null)
+		if(visible === undefined || visible === null)
 		  visible = (jq("#sall").is(':checked'));
 		  
 		if(visible) {
 		  self.map.swf.clearFilters(self.stylelayers["Project Locations"].order);
 		  jq.each(self.sectors, function(sector) {
-			if(Object.include(self.visibleSectors, sector) === null)
+			if(Object.include(self.visibleSectors, sector) === undefined || Object.include(self.visibleSectors, sector) === null)
 			  self.visibleSectors.push(sector);
 		  });
 		} else {
@@ -257,7 +257,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
         $('input:radio[name="by_region"]').filter('[value="district"]').attr('checked', true);
 
 	  } else if(sector == 'counts') {
-		if(self.stylelayers["Project Counts"] !== undefined)
+		if(self.stylelayers["Project Counts"] !== undefined && self.stylelayers["Project Counts"] !== null)
 			self.map.showLayer(self.stylelayers["Project Counts"].order, visible);
 		self.map.showLayer(self.stylelayers["Project Locations"].order, !visible);
 		refreshCharts = false;
@@ -265,23 +265,23 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		
         jq('#map-content-icons').hide()
 		jq('#map-content-regions').show()
-	  } else if(sector === null) {
+	  } else if(sector === undefined || sector === null) {
 		self.map.showLayer(self.stylelayers["Project Locations"].order, false);
 		if(self.stylelayers["Project Counts"] !== undefined)
 			self.map.showLayer(self.stylelayers["Project Counts"].order, false);
 	  } else {
 		jq("#sall").attr('checked', false);			 
-		if(visible === null)
+		if(visible === undefined || visible === null)
 		  visible = !(jq("#sectorcontrol_" + sector).hasClass('active'));
 
 		if(visible == true){
-		  if(self.stylelayers["Project Counts"] !== undefined)
+		  if(self.stylelayers["Project Counts"] !== undefined && self.stylelayers["Project Counts"] !== null)
 			self.map.showLayer(self.stylelayers["Project Counts"].order, false);
 		  self.map.showLayer(self.stylelayers["Project Locations"].order, false);
 		  self.map.swf.removeFilter(self.stylelayers["Project Locations"].order, 
 		  {expression: self.complexSectorExpression(self.visibleSectors)});
 
-		  if(Object.include(self.visibleSectors, sector) === null) {
+		  if(Object.include(self.visibleSectors, sector) === undefined || Object.include(self.visibleSectors, sector) === null) {
 			self.visibleSectors.push(sector);	 
 
 			self.map.swf.addFilter(self.stylelayers["Project Locations"].order, 
@@ -307,7 +307,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  self.setMapTitle();
 	  self.showVisibleSectors();
 
-	  if(refreshCharts === null || refreshCharts == true)
+	  if(refreshCharts === undefined || refreshCharts === null || refreshCharts == true)
 		self.sectorPieChart(sector, false);
 	  return false;
 	},
@@ -319,7 +319,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		var sector_dom = jq("#" + sc.id);
 		var sector = sector_dom.attr("sector-name");
 
-		if(Object.include(self.visibleSectors, sector) !== null) {
+		if(Object.include(self.visibleSectors, sector) !== undefined || Object.include(self.visibleSectors, sector) !== null) {
 		  sector_dom.removeClass('inactive').addClass('active');
 		} else {
 		  sector_dom.removeClass('active').addClass('inactive');			
@@ -331,7 +331,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	complexSectorExpression: function(sectorFilters, sector_attribute) {
 	  var self = this;
 	  var expression = "";
-	  if(sector_attribute === null)
+	  if(sector_attribute === undefined || sector_attribute === null)
 		sector_attribute = major_sector_name;
 		
 	  for(var sector=0;sector<sectorFilters.length; sector++) {
@@ -346,7 +346,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  if(self.stylelayers[self.current_indicator] !== undefined)
 		self.map.showLayer(self.stylelayers[self.current_indicator].order, false);
 		
-	  if(indicator === null) {
+	  if(indicator === undefined || indicator === null) {
 		jq('#layercontrol_indicators').html("Indicators");
 		self.map.showLayer(self.stylelayers[indicator].order, false);
 	  }
@@ -360,12 +360,12 @@ if(typeof(F1)=='undefined') {F1 = {};}
 			self.map.setLayerStyle(self.stylelayers[indicator].order, style);
 			
 		var infotabs = [];
-		if(F1.WorldBank.indicators[indicator].table !== null)
+		if(F1.WorldBank.indicators[indicator].table !== undefined && F1.WorldBank.indicators[indicator].table !== null)
 		  infotabs.push({title: "Data", type:"table", value:F1.WorldBank.indicators[indicator].table})
-		if(F1.WorldBank.indicators[indicator].description !== null)
+		if(F1.WorldBank.indicators[indicator].description !== undefined && F1.WorldBank.indicators[indicator].description !== null)
 		  infotabs.push({title: "About", type: "text", value:F1.WorldBank.indicators[indicator].description})
 		var infosub = F1.WorldBank.indicators[indicator].subtitle;
-		if(F1.WorldBank.indicators[indicator].infosubtitle !== null)
+		if(F1.WorldBank.indicators[indicator].infosubtitle !== undefined && F1.WorldBank.indicators[indicator].infosubtitle !== null)
 		  infosub = F1.WorldBank.indicators[indicator].infosubtitle
 		  
 		self.map.swf.addLayerInfoWindowFilter(self.stylelayers[indicator].order, {title: indicator + ": $["+ F1.WorldBank.indicators[indicator].styles.fill.selectedAttribute +"]", subtitle: infosub, tabs:infotabs});
@@ -407,7 +407,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 			var sector_name = project[major_sector_name];
 			var wb_sector = self.sectors[self.sector_names[sector_name.toLowerCase().trim()]];
 
-			if(wb_sector === null)
+			if(wb_sector === undefined || wb_sector === null)
 			  wb_sector = self.sectors["public"];
 			  
 			wb_sector.funding += attr["total amt"];
@@ -429,7 +429,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		  attr = feature;
 		  var amount = attr["totalamt"];
 		  
-		  if(self.projects[attr["id"]] === null) { // first time we've seen this project ID
+		  if(self.projects[attr["id"]] === undefined || self.projects[attr["id"]] === null) { // first time we've seen this project ID
 			var project = {};
 			
 			// Filter project
@@ -449,7 +449,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 			
 			var prodname = project["prodlinetext"];
 			if(prodname !== undefined) {
-				if(self.productlines[prodname] == undefined || self.productlines[prodname] === null) { 
+				if(self.productlines[prodname] === undefined || self.productlines[prodname] === null) { 
 					self.productlines[prodname] = 0; 
 				}
 				self.productlines[prodname] += amount;
@@ -459,19 +459,19 @@ if(typeof(F1)=='undefined') {F1 = {};}
 				var sector_name = sector["Name"].toLowerCase().trim();
 				var wb_sector = self.sectors[self.sector_names[sector_name]];
 
-				if(wb_sector === null)
+				if(wb_sector === undefined || wb_sector === null)
 					wb_sector = self.sectors["public"];
 
-				if(project["sector_funding"] === null)
+				if(project["sector_funding"] === undefined || project["sector_funding"] === null)
 					project["sector_funding"] = {}
-				if(project["sector_funding"][wb_sector.shortname] === null)
+				if(project["sector_funding"][wb_sector.shortname] === undefined || project["sector_funding"][wb_sector.shortname] === null)
 					project["sector_funding"][wb_sector.shortname] = 0
 				
 				var actual_funding = (parseInt(sector["Percent"],10) / 100.0) * amount;
 				project["sector_funding"][wb_sector.shortname] += actual_funding
 				wb_sector.funding += actual_funding
 				// There are duplicates in the Major Sector Percent listings
-				if(Object.include(wb_sector.projects, project) === null)				   
+				if(Object.include(wb_sector.projects, project) === undefined || Object.include(wb_sector.projects, project) === null)				   
 					wb_sector.projects.push(project);
 			});
 			self.total_funding += amount;
@@ -533,7 +533,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		    char_length = 45;
 		    }
 
-		if(refreshControls === null || refreshControls == true){
+		if(refreshControls === undefined || refreshControls === null || refreshControls == true){
 			self.toggleSector("all", false, false); // watch recursion
 			self.toggleSector(sector_name, true,false); // watch recursion
 		}
@@ -570,7 +570,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 			funding = self.total_funding;
 			opts["chart"] = {"legend": labels, "colors": colors}; // in here for pre-1.8 api calls
 			opts["colors"] = colors; // for 1.8+ calls
-			if(self.stylelayers["Project Locations"] !== null)
+			if(self.stylelayers["Project Locations"] !== undefined && self.stylelayers["Project Locations"] !== null)
 				opts["chart"]["onclick"] = function() {wb.toggleSector(links[this.bar.index])};
 				 
 			var financing_total = funding > 1000 ? (funding/1000).toFixed(2) + " Billion" : funding.toFixed(2) + " Million";
@@ -615,7 +615,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 			jq('#sector_funding_total').show();
 			jq('#chart-left-pie-chart').show();
 
-			if(self.stylelayers["Project Locations"] !== null)
+			if(self.stylelayers["Project Locations"] !== undefined && self.stylelayers["Project Locations"] !== null)
 				opts["href"] = links;
 			
 			F1.Visualizer.charts.pie(190, width, pie_options, "chart-left-pie-chart", opts);		  
@@ -706,7 +706,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
             var index;
             jq.each(possibleLayers, function(layer) {
                 index = Object.include(findlayers, possibleLayers[layer].title);
-                if(index !== null){
+                if(index !== undefined && index !== null){
                     self.stylelayers[findlayers[index]] = {order: possibleLayers[layer].order, source: possibleLayers[layer].source, sharedLayer: false};
                     if(Object.include(["Infant Mortality", "Population", "Poverty", "Maternal Health", "Malnutrition"], possibleLayers[layer].title)) {
                         F1.WorldBank.indicators[possibleLayers[layer].title].styles.fill.selectedAttribute = possibleLayers[layer].styles.fill.selectedAttribute;
@@ -765,7 +765,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	},
 	highlightRegions: function(regions, region_attr) {
 		var self = this;
-		if(region_attr === null)
+		if(region_attr === undefined || region_attr === null)
 			region_attr = "Country_1";
 		
 		self.map.swf.clearHighlights(0);
