--- a/m4r/views/javascript.erb
+++ b/m4r/views/javascript.erb
@@ -1,10 +1,8 @@
-<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
+<!-- <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script> -->
 
   <script type="text/javascript" src="/js/jquery-1.js"></script>
     <script type="text/javascript" charset="utf-8">
     var jq = jQuery.noConflict();
-    if (top.frames.length!=0)
-      top.location=self.document.location;
     </script>  
   <script type="text/javascript" src="/js/tipsy.js"></script>
   <script type="text/javascript" src="/js/jquery_002.js"></script>
