--- a/m4r/views/embed.erb
+++ b/m4r/views/embed.erb
@@ -4,61 +4,23 @@
   <title>The World Bank - Mapping for Results<%= @page_subtitle %></title>
 
   <link rel="shortcut icon" href="http://maps.worldbank.org/favicon.ico" type="image/x-icon" />
-  
-  <link type="text/css" rel="stylesheet" media="all" href="/css/system-menus.css" />
-  <link type="text/css" rel="stylesheet" media="all" href="/css/collapsible.css" />
-  <link type="text/css" rel="stylesheet" media="all" href="/css/style.css" />
-  <link type="text/css" rel="stylesheet" media="all" href="/css/layout.css" />
-  <link type="text/css" rel="stylesheet" media="all" href="/css/one-off.css" />
-                                                           
+
   <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css" />
-  <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css" />
-  
-
-<script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/prototype.js"></script>
-
-  <script type="text/javascript" src="/js/jquery-1.js"></script>
-    <script type="text/javascript" charset="utf-8">
-    var jq = jQuery.noConflict();
-    if (top.frames.length!=0)
-      top.location=self.document.location;
-    </script>  
-  <script type="text/javascript" src="/js/tipsy.js"></script>
-  <script type="text/javascript" src="/js/jquery_002.js"></script>
-  <script type="text/javascript" src="/js/ui.js"></script>
-  <script type="text/javascript" src="/js/effects_002.js"></script>
-  <script type="text/javascript" src="/js/effects.js"></script>  
-
-<script type="text/javascript" charset="utf-8" src="/js/f1.js"></script>
-<script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
-<% if PLATFORM_API_URL =~ /geocommons/ %>
-<script src="<%= PLATFORM_API_URL %>/javascripts/visualize.min.js?1279556727" type="text/javascript"></script>
-<% else %>
-<script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.js"></script>
-<script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/raphael.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/g.raphael.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/g.bar.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/g.line.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/g.dot.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/g.pie.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/jquery.tablesorter.min.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/f1.maker.visualizer.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/jquery-css-transform.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/f1.maker.visual_creator.js?1279556727" type="text/javascript"></script>
-<% end %>
-
-<script src="/map.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="/assets/css/mapping.css">
+  <link rel="stylesheet" href="/assets/css/menu.css">
+  <script type="text/javascript" charset="utf-8">
+  // if (top.frames.length!=0)
+  //   top.location=self.document.location;
+  </script>
+  <%= partial :javascript %>
 
   <style type="text/css" media="screen">
-    body {background: #FFFFFF;}
-    h1 {text-align: left;}
+  body, html {background-color: #FFFFFF; padding: 0; margin: 0;min-width:0}
+  h1 {text-align: left;}
   </style>
-  
+
 </head>
 <body class=" region-left region-right region-far-right region-content-top">
-
-    <%= yield %>
-
-<%= partial :analytics %>
+  <%= yield %>
+  <%= partial :analytics %>
 </body></html>
