--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -7,6 +7,10 @@
     <meta name="keywords" content="<%= @page.hierarchy.reverse.collect {|c| c.name}.join(",") unless @page.nil? %>,health,poverty,millenium development goals,indicators,development,humanitarian">
     <meta name="author" content="World Bank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" charset="utf-8">
+      // if (top.frames.length!=0)
+      //   top.location=self.document.location;
+    </script>
     <link rel="stylesheet" href="/assets/css/mapping.css">      
   <link type="text/css" rel="stylesheet" media="all" href="/css/system-menus.css" />
    <link type="text/css" rel="stylesheet" media="all" href="/css/collapsible.css" />
