--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -1,8 +1,6 @@
   <div id="share">
   	<ul class="dropmenu map-options">
   	    <% if %w{country}.include?(@page.page_type) %>
-          <li class="embed"><a title="embed" href="#" id="embed_map"><span></span>EMBED</a>     
-           </li>     
           <li class="download"><a title="download" href="#" id="download_data"><span></span>DOWNLOAD</a>     
               <ul class="dropmenu_options" id="data_links">
               </ul>
@@ -10,6 +8,7 @@
         <% end %>
           <li class="share"><a title="share" href="#" id="share_options"><span></span>SHARE</a>
               <ul class="dropmenu_options">
+                <li><a title="embed" href="#" id="embed_map"><span></span>Embed</a></li>
                 <li><a href="http://twitter.com/home?status=<%= @page_title.gsub(/\s/,'+') %>+<%= PLATFORM_API_URL + request.env["REQUEST_URI"] %>" target="_new" id="twitter_link">Twitter</a></li>
                 <li><a href="http://facebook.com/worldbank" id="">Facebook</a></li>
                 <!-- <li><a href="#" id="">Embed the Map</a></li> -->
@@ -17,3 +16,5 @@
           </li>
       </ul>
   </div>
+  <%= partial :embed_links %>
+  
