--- a/m4r/views/full.erb
+++ b/m4r/views/full.erb
@@ -76,7 +76,7 @@
     	<div class="main clearfix" id="main-map">
         	<div id="map-content-header">
             <div class="worldmenuholder">
-            	<a class="mag-glass" href="#"></a>
+            	<a class="mag-glass" href="#" id="map_mag"></a>
               <%= partial :global_navigation %>
               <%= partial :summary %>
             </div>
