--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -208,6 +208,15 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	    this.setBookmark("indicator",this.current_indicator);
 	    return false;
 	},
+	updateEmbedLink: function() {
+        this.saveState();
+        var base_link = document.location.protocol + "//" + document.location.host + document.location.pathname;
+        var url = base_link + document.location.hash;
+        var iframe = "<iframe src='http://localhost:4567/afr/kenya/embed?width=800&height=400" + document.location.hash.replace(/&/g,'&') + "' height='400' width='800' scrolling='no' frameborder='0'></iframe>"
+        jq("#embed_code").val(iframe);
+        jq("#share_link").attr("value", url);
+        return false;
+	},
 	updateTwitterLink: function() {
         this.saveState();
         var base_link = wb.country + " - Mapping for Results " + document.location.protocol + "//" + document.location.host + document.location.pathname
