--- a/assets/css/mapping.css
+++ b/assets/css/mapping.css
@@ -614,7 +614,7 @@ a.moreData{
 #share_window {z-index: 10000; padding: 10px 10px; background-color: #888; position: absolute; top:20px; left: 80px;}
 #close_embed {
 	background: url('img/sprite2.png') no-repeat -285px -705px;
-/*    text-indent: -500em;*/
+    text-indent: -500em;
 	height: 10px;
 	width: 10px;
 	color: #FFF; float: right
